@startuml
'https://plantuml.com/class-diagram

class Solution46 {
main()
readFile()
Solution46()
HashMap<String, Integer> map
String tempKeys = sortResults()
printResults() :pass tempKeys and map
}

Solution46 *-- readFile
Solution46 *-- sortResults
sortResults <|-- printResults
sortResults : int i, j , k
sortResults : String[] keys
sortResults : String[] counts
sortResults : String[] tempCount
sortResults : Arrays.sort
sortResults : String[] tempKeys
sortResults : int value
sortResults : return tempKeys
printResults : int i, j, value
printResults : System.out.println
printResults : System.out.print

class readFile{
{method} readInput()
int count
Scanner : inputFile
HashMap<String, Integer> map
String[] input
String[] array
inputFile.close()
return map
}

@enduml